After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680114 - Calibration should ignore events from tools other than the one we calibrate
Calibration should ignore events from tools other than the one we calibrate
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Wacom
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: Peter Hutterer
Control-Center Maintainers
: 686730 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-07-17 16:45 UTC by Olivier Fourdan
Modified: 2012-10-24 08:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (4.18 KB, patch)
2012-07-18 12:48 UTC, Olivier Fourdan
committed Details | Review

Description Olivier Fourdan 2012-07-17 16:45:24 UTC
On tablets which have both stylus and touch, the area may differ between stylus and touch (see bug 680105) so calibration must be specific for a given device and ignore others.
Comment 1 Olivier Fourdan 2012-07-18 12:48:27 UTC
Created attachment 219096 [details] [review]
Proposed patch
Comment 2 Bastien Nocera 2012-10-24 08:25:59 UTC
*** Bug 686730 has been marked as a duplicate of this bug. ***