wacom: Do calibration for the selected tool only

As different tools may have different resolutions (e.g.
touch vs. stylus on tablets which support both).

https://bugzilla.gnome.org/show_bug.cgi?id=680114